# DataOPS_-Unifor

./: .env.example  .gitignore  Dockerfile  INSTALACAO_AMBIENTE.md  Makefile  Makefile.txt  README.md  SETUP_COMPLETO.md  Trabalho.md  cheatsheet.md  docker-compose.yaml  docker-compose.yml  label_studio_ner_config.xml  requirements.txt  tasks.py  tox.ini
TrabalhoAndre/: README.MD  makefile
airflow/: .env.example  README_GITSYNC.md  docker-compose.yaml  requirements.txt
aula_04/: .gitignore  01_gerenciamento_prompts.py  02_versionamento_prompts.py  env_template.txt  requirements.txt
dags/: 00_event_driven_ingestion.py  01_bronze_ingestion_advanced.py  02_silver_transformation_advanced.py  03_gold_publishing_advanced.py  datasets.py  example_dag.py  input_data_dag.py  inserting_data_on_labelstudio.py  pipeline_clima.py  pipeline_monitoring.py  process_data_dag.py  requirements.txt  weather_dag.py
data/: __init__.py  final_gold.duckdb  historico_bronze.duckdb  historico_silver.duckdb  hoje_bronze.duckdb  hoje_silver.duckdb  weather_api.py
environments/: environment.yml  pyproject.toml
monitoring/: weather_dashboard.py
projeto_final/: .env_exemple  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
projeto_final/airflow/dags/: dag_annotations.py  dag_bronze.py  dag_gold.py  dag_silver.py  gold_annotated_to_postgres.py
projeto_final/airflow/include/expectations/: gold_expectations.py
projeto_final/core/: api.py  minio_handler.py
projeto_final/postgres/init/: create_superset_db.sh
projeto_final/streamlit/: app.py
(+1249 files in other folders)
