[project]
name = "pipeline_dados"
version = "0.1.0"
description = "Pipeline de dados com Label Studio, Airflow, MinIO e PostgreSQL"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "sqlalchemy",
    "psycopg2",
    "requests",
    "pydantic",
    "boto3",
    "minio",
    "jupyter",
    "ipykernel",
    "pyarrow",
    "fastparquet",
    "apache-airflow",
    "pendulum",
    "tqdm",
    "rich",
    "label-studio-sdk",
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-amazon",
    "apache-airflow-providers-http",
    "apache-airflow-providers-cncf-kubernetes",
    "python-dotenv",
    "loguru",
    "streamlit>=1.28.0",
    "plotly>=5.17.0"
]
