[project]
name = "projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.10.3",
    "apache-airflow-providers-amazon==9.4.0",
    "boto3==1.35.30",
    "great-expectations==0.18.16",
    "loguru==0.7.2",
    "minio==7.2.7",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.9",
    "pyarrow==17.0.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sqlalchemy==1.4.49",
    "streamlit>=1.51.0",
    "tenacity==9.0.0",
    "typing-extensions==4.12.2",
    "plotly==5.24.1",
]
